--- a/player.html
+++ b/player.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M12 Assignment - The Music Player Application</title>
-    <!-- <script src="js/player.js"></script> -->
+    <script src="js/player.js"></script>
 </head>
 <body>
     <h1>The Music Player</h1>
     <!-- ADD DROP DOWN MENU -->
+    <select id="albums">Select Album</select>
     <!-- ADD PLAY BUTTON -->
+    <button onclick="play">Play</button>
     <!-- ADD SHOW FAVORITE ALBUM BUTTON -->
+    <button onclick="show">Show Favorite Album</button>
     <p id="favoriteAlbum"></p>
 </body>
 </html>
